--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./CSS/style.css" />
-
         <script src="./JS/class.js"></script>
+        <title>Catálogo</title>
 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -14,12 +14,15 @@
             integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
             crossorigin="anonymous"
         />
+        <link 
+            rel="stylesheet" 
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
+        >
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"
         ></script>
-        <title>Catálogo</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -44,25 +47,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="#" class="nav-link active" aria-current="page">Home</a>
+                            <a href="/" class="nav-link active" aria-current="page">Home</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Favoritos</a>
+                        <li class="nav-item d-flex align-items-center">
+                            <button id="btn-favorites" class="border-0 bg-transparent">Favoritos</button>
                         </li>
 
                         <li class="nav-item dropdown">
                             <a
                                 href="#"
                                 class="nav-link dropdown-toggle"
-                                id="navbarDropdown"
+                                id="navbar-dropdown"
                                 role="button"
                                 data-bs-toggle="dropdown"
                                 aria-expanded="false"
                             >
                                 Categorias
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <ul class="dropdown-menu" aria-labelledby="navbar-dropdown">
                                 <li><a href="#" class="dropdown-item">Ação</a></li>
                                 <li><a href="#" class="dropdown-item">Suspense</a></li>
                                 <li><a href="#" class="dropdown-item">Aaventura</a></li>
@@ -96,24 +99,30 @@
                         <button
                             id="movie-close"
                             class="btn-close position-absolute"
-                            style="right: 1rem; top: 1rem"
+                            style="right: 1.3rem; top: 1.3rem"
                         ></button>
-                        <h2 id="movie-title" class="card-title">Título do filme</h2>
+                        <div class="d-flex gap-3 mb-3">
+                            <h2 id="movie-title" class="card-title"></h2>
+                            <button
+                                id="movie-favorite"
+                                class="border-0 bg-transparent"
+                                style="font-size: 1.3rem;"
+                                data-object=""
+                            >
+                            <i class="bi bi-heart align-self-center"></i>
+                            </button>
+                        </div>
                         <div class="d-flex flex-column w-100">
                             <div class="mb-3">
-                                <span id="movie-year">20XX</span>
+                                <span id="movie-year"></span>
                                 ・
-                                <span id="movie-time">XXX min</span>
+                                <span id="movie-time"></span>
                                 ・
-                                <span id="movie-genre">XXXX, XXXX, XXXX</span>
+                                <span id="movie-genre"></span>
                             </div>
-                            <span id="movie-direction" class="mb-2">Direção: XXX, XXX</span>
-                            <span id="movie-cast" class="mb-3">Elenco: XXX, XXX, XXX, XXX</span>
-                            <p id="movie-synopsis">
-                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, iusto minima? Quaerat
-                                sunt quo libero porro minima asperiores amet, molestiae omnis illo sit, iusto, magni
-                                quam fuga placeat assumenda doloremque.
-                            </p>
+                            <span id="movie-direction" class="mb-2"></span>
+                            <span id="movie-cast" class="mb-3"></span>
+                            <p id="movie-synopsis"></p>
                         </div>
                     </div>
                 </div>
