--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
             integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
             crossorigin="anonymous"
         />
-        <link 
-            rel="stylesheet" 
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-        >
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -91,8 +88,8 @@
         <main class="my-4">
             <div id="lista-filmes" class="container-md gap-4 mx-auto"></div>
             <div id="mostrar-filme" class="card flex-row">
-                <div id="detalhes" class="card d-flex flex-row" style="z-index: 10">
-                    <div style="max-width: 40%; min-width: 40%; overflow: hidden">
+                <div id="detalhes" class="card d-flex flex-row w-100" style="z-index: 10">
+                    <div style="max-width: 50%; min-width: 40%; overflow: hidden">
                         <img id="movie-image" class="card-img-top h-100 w-100" style="object-fit: cover" src="" />
                     </div>
                     <div class="card-body">
@@ -101,21 +98,17 @@
                             class="btn-close position-absolute"
                             style="right: 1.3rem; top: 1.3rem"
                         ></button>
-                        <button
-                            id="btn-edit"
-                            class="btn btn-success"
-                        >
-                            <i class='bi bi-pencil'></i>
+                        <button id="btn-edit" class="btn btn-success">
+                            <i class="bi bi-pencil"></i>
                         </button>
                         <div class="d-flex gap-3 mb-3">
                             <h2 id="movie-title" class="card-title"></h2>
                             <button
                                 id="movie-favorite"
                                 class="border-0 bg-transparent"
-                                style="font-size: 1.3rem;"
-                                data-object=""
+                                style="font-size: 1.3rem"
                             >
-                            <i class="bi bi-heart align-self-center"></i>
+                                <i class="bi bi-heart align-self-center"></i>
                             </button>
                         </div>
                         <div class="d-flex flex-column w-100">
